# ayin-intelligence

./: .gitignore  CLAUDE.md  README.md  desktop.ini  pyproject.toml  requirements.txt  run_full_pipeline.py  run_full_pipeline_demo.py  run_slow_decay.py  run_stadium_shock.py  run_strand_validation.py  verify_chronic.py
ayin/: __init__.py  api.py  coherence.py  nodes.py  simulator.py  strand_agent.py  web.py
ayin/docs/: FULL_PIPELINE_VALIDATION.md  logbook.md
ayin/docs/milestones/: PIPELINE_VALIDATION_README.txt  engineering_notes.md
ayin/static/: visualize.html
