[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "ayin-intelligence"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "fastapi",
    "uvicorn[standard]",
    "websockets",
]

[tool.setuptools.packages.find]
include = ["ayin*"]
